# camera

src/: CMakeLists.txt  README.MD
src/Human+/: CMakeLists.txt
src/Human+/include/: Algorithm.h  Blob.h  CameraBase.h  CameraInfo.h  CameraPara.h  CameraSetting.h  ImageCapture.h  MS_MACRO.h  MoveSenseCamera.h  StereoBlob.h
src/Human+/lib/: Blob.cpp  CMakeLists.txt  ImageCapture.cpp  StereoBlob.cpp
src/Human+/opencv340/include/opencv2/: core.hpp
src/Human+/opencv340/x64/lib/: MoveSenseCamera.lib  MoveSenseCameraD.lib
src/HumanWidget/: CMakeLists.txt  HumanWidget.cpp  HumanWidget.h  HumanWidget.ui  json_glasses.json  json_object.json  main.cpp
src/HumanWidget/ConfigFiles/: CS240-USB2.0.json  CS240.json  CS480-USB2.0.json  CS480.json  CameraID.json  LH1080-USB2.0.json  LH1080.json  MoveSenseRectify.json  PSP010-400-USB2.0.json  PSP010-400.json
src/NDI/: CMakeLists.txt
src/NDI/NDIOfficial/: APIStructures.h  CombinedAPISample.aps  CombinedAPISample.rc  CombinedAPISampleDlg.cpp  CombinedAPISampleDlg.h
src/NDIClient/: CMakeLists.txt  Json_NDIData.cpp  Json_NDIData.h  NDIClient.cpp  NDI_DataStruct.cpp
src/cmake/: FindBoost.cmake  FindQt.cmake
src/include/Human+/: ImageCapture.h
src/include/HumanWidget/: SendMat.h
src/include/NDIClient/: NDIClient.h  NDI_DataStruct.h  ReceiveStruct.h
